[gd_scene load_steps=35 format=3 uid="uid://dcfett6ns4vqq"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_ckmoc"]
[ext_resource type="PackedScene" uid="uid://baau16ndim5ve" path="res://scenes/ui/end_screen/end_screen.tscn" id="3_s0g5e"]
[ext_resource type="PackedScene" uid="uid://blv1sdwd4eyiq" path="res://scenes/ui/item_box/item_box_ui.tscn" id="4_e2rpy"]
[ext_resource type="AudioStream" uid="uid://by4f4dfsn3bu" path="res://assets/audio/sfx/misc/pity_sound.wav" id="5_a5c3q"]
[ext_resource type="AudioStream" uid="uid://mx7dqfnfyml1" path="res://assets/audio/sfx/misc/success_sound.wav" id="6_lf8jj"]
[ext_resource type="AudioStream" uid="uid://dutekcqjlcxcm" path="res://assets/audio/music/game_song.wav" id="7_efirv"]
[ext_resource type="Texture2D" uid="uid://b4te54epp1n14" path="res://assets/frames/background.png" id="8_on7by"]
[ext_resource type="PackedScene" uid="uid://bde5jwauuhx81" path="res://scenes/item/catcher.tscn" id="9_o1ea7"]
[ext_resource type="Script" path="res://scenes/dropper/dropper.gd" id="10_atw0u"]
[ext_resource type="PackedScene" uid="uid://d1nn1ff7rwlbn" path="res://scenes/item/dropped_item.tscn" id="11_466xo"]
[ext_resource type="Script" path="res://scenes/ui/hud.gd" id="12_efqn4"]
[ext_resource type="Texture2D" uid="uid://vlejmxso1xi4" path="res://assets/frames/order_frame.png" id="13_gmxgm"]
[ext_resource type="Texture2D" uid="uid://cnd1kj7020uls" path="res://assets/frames/frame.png" id="14_ydsin"]
[ext_resource type="Texture2D" uid="uid://7uytjmrtwfaq" path="res://assets/frames/frame_result.png" id="15_jtai5"]
[ext_resource type="Texture2D" uid="uid://bnbhditt20lap" path="res://assets/frames/symbols.png" id="16_nf57k"]
[ext_resource type="Script" path="res://scripts/tutorial.gd" id="17_16m7q"]
[ext_resource type="LabelSettings" uid="uid://by2l3bawx6flr" path="res://assets/misc/tutorial_label.tres" id="18_yhj1o"]
[ext_resource type="Script" path="res://scripts/kill_zone.gd" id="19_02ytf"]

[sub_resource type="Environment" id="Environment_1begj"]

[sub_resource type="Animation" id="Animation_00qca"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("HUD/Shift:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/Shift/ClickToBegin:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6kx3j"]
resource_name = "begin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/Shift:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(877, 82), Vector2(877, 82), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/Shift/ClickToBegin:label_settings:outline_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [30, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/Shift/ClickToBegin:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wa3xa"]
_data = {
"RESET": SubResource("Animation_00qca"),
"begin": SubResource("Animation_6kx3j")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_2rdmc"]
atlas = ExtResource("14_ydsin")
region = Rect2(1737.93, 1356.28, 250.635, 660.765)

[sub_resource type="LabelSettings" id="LabelSettings_j71ag"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_bx1hl"]
font_size = 60
shadow_size = 26
shadow_color = Color(0, 0, 0, 0.866667)

[sub_resource type="LabelSettings" id="LabelSettings_mrp7q"]
font_size = 76
font_color = Color(1, 1, 0.360784, 1)
outline_size = 30
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_f44vb"]
font_size = 100
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_0b81q"]
atlas = ExtResource("16_nf57k")
region = Rect2(25.9796, 27.5487, 586.886, 539.81)

[sub_resource type="AtlasTexture" id="AtlasTexture_tglfl"]
atlas = ExtResource("16_nf57k")
region = Rect2(750.957, 27.5487, 659.07, 586.886)

[sub_resource type="LabelSettings" id="LabelSettings_akisb"]
font_size = 40

[sub_resource type="AtlasTexture" id="AtlasTexture_5d3lm"]
atlas = ExtResource("14_ydsin")
region = Rect2(1230.78, 128.59, 801.272, 463.295)

[sub_resource type="LabelSettings" id="LabelSettings_40qpg"]
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d2wnh"]
font_size = 195
font_color = Color(1, 1, 0.282353, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wf6ld"]
size = Vector2(2366, 412.5)

[node name="Game" type="Node2D"]
script = ExtResource("1_ckmoc")
end_scene = ExtResource("3_s0g5e")
item_box_ui = ExtResource("4_e2rpy")

[node name="Sounds" type="Node2D" parent="."]
process_mode = 3

[node name="FailSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_a5c3q")

[node name="SuccessSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_lf8jj")

[node name="Music" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_efirv")
volume_db = 17.143
autoplay = true

[node name="Art" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Art"]
offset_right = 1938.0
offset_bottom = 1090.0
texture = ExtResource("8_on7by")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="Art"]
offset_right = 756.0
offset_bottom = 133.0
color = Color(0.403922, 0.266667, 0.286275, 1)

[node name="Catcher" parent="." instance=ExtResource("9_o1ea7")]
position = Vector2(1229, 946)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1begj")

[node name="SpawnPosition" type="Marker2D" parent="."]
position = Vector2(392, 789)
scale = Vector2(0.29, 0.29)

[node name="Dropper" type="Node2D" parent="."]
position = Vector2(827, -417)
script = ExtResource("10_atw0u")
item_scene = ExtResource("11_466xo")

[node name="Timer" type="Timer" parent="Dropper"]
autostart = true

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_efqn4")
item_box_ui = ExtResource("4_e2rpy")

[node name="UIAnimation" type="AnimationPlayer" parent="HUD"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_wa3xa")
}

[node name="Shift" type="Control" parent="HUD"]
process_mode = 3
anchors_preset = 0
offset_left = 877.0
offset_top = 82.0
offset_right = 917.0
offset_bottom = 122.0

[node name="TextureRect" type="TextureRect" parent="HUD/Shift"]
layout_mode = 0
offset_left = 12.0
offset_top = -5.0
offset_right = 1954.0
offset_bottom = 818.0
texture = ExtResource("13_gmxgm")
expand_mode = 1

[node name="Mistakes" type="VBoxContainer" parent="HUD/Shift"]
layout_mode = 0
offset_left = 602.0
offset_top = 137.0
offset_right = 751.0
offset_bottom = 391.0
metadata/_edit_group_ = true

[node name="ItemBox" type="TextureRect" parent="HUD/Shift/Mistakes"]
self_modulate = Color(0.678431, 0.337255, 0.317647, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = SubResource("AtlasTexture_2rdmc")
expand_mode = 1
stretch_mode = 5

[node name="MistakeLabel" type="Label" parent="HUD/Shift/Mistakes"]
layout_mode = 2
text = "0/0"
label_settings = SubResource("LabelSettings_j71ag")
horizontal_alignment = 1

[node name="RecipeLabel" type="Label" parent="HUD/Shift"]
layout_mode = 0
offset_left = 8.0
offset_top = 29.0
offset_right = 796.0
offset_bottom = 112.0
text = "Flaming Hot Cheetos"
label_settings = SubResource("LabelSettings_bx1hl")
horizontal_alignment = 1

[node name="Items" type="HBoxContainer" parent="HUD/Shift"]
layout_mode = 1
offset_left = 111.0
offset_top = 103.0
offset_right = 788.0
offset_bottom = 357.0
theme_override_constants/separation = 50

[node name="ItemBoxUI" parent="HUD/Shift/Items" instance=ExtResource("4_e2rpy")]
layout_mode = 2

[node name="ItemBoxUI2" parent="HUD/Shift/Items" instance=ExtResource("4_e2rpy")]
layout_mode = 2

[node name="ItemBoxUI3" parent="HUD/Shift/Items" instance=ExtResource("4_e2rpy")]
layout_mode = 2

[node name="ClickToBegin" type="Label" parent="HUD/Shift"]
layout_mode = 0
offset_left = 76.0
offset_top = 397.0
offset_right = 718.0
offset_bottom = 488.0
text = "CLICK TO BEGIN"
label_settings = SubResource("LabelSettings_mrp7q")
horizontal_alignment = 1

[node name="FinishScreen" type="Control" parent="HUD"]
process_mode = 3
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="TextureRect" parent="HUD/FinishScreen"]
layout_mode = 0
offset_left = -1.0
offset_top = -27.0
offset_right = 1919.0
offset_bottom = 1053.0
texture = ExtResource("15_jtai5")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/FinishScreen/ColorRect"]
layout_mode = 0
offset_left = 979.0
offset_top = 134.0
offset_right = 1464.0
offset_bottom = 615.0

[node name="SuccessText" type="Label" parent="HUD/FinishScreen/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Fail
"
label_settings = SubResource("LabelSettings_f44vb")

[node name="GoalRow" type="HBoxContainer" parent="HUD/FinishScreen/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="GoalImageFail" type="TextureRect" parent="HUD/FinishScreen/ColorRect/VBoxContainer/GoalRow"]
modulate = Color(0.823529, 0, 0.168627, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = SubResource("AtlasTexture_0b81q")
expand_mode = 1
stretch_mode = 5

[node name="GoalImageOK" type="TextureRect" parent="HUD/FinishScreen/ColorRect/VBoxContainer/GoalRow"]
modulate = Color(0.329412, 0.580392, 0, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = SubResource("AtlasTexture_tglfl")
expand_mode = 1
stretch_mode = 5

[node name="GoalLabel" type="Label" parent="HUD/FinishScreen/ColorRect/VBoxContainer/GoalRow"]
layout_mode = 2
text = "Goals: 0/10"
label_settings = SubResource("LabelSettings_akisb")

[node name="MistakesRow" type="HBoxContainer" parent="HUD/FinishScreen/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="MistakesImageFail" type="TextureRect" parent="HUD/FinishScreen/ColorRect/VBoxContainer/MistakesRow"]
modulate = Color(0.823529, 0, 0.168627, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = SubResource("AtlasTexture_0b81q")
expand_mode = 1
stretch_mode = 5

[node name="MistakesImageOK" type="TextureRect" parent="HUD/FinishScreen/ColorRect/VBoxContainer/MistakesRow"]
modulate = Color(0.329412, 0.580392, 0, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = SubResource("AtlasTexture_tglfl")
expand_mode = 1
stretch_mode = 5

[node name="MistakesLabel" type="Label" parent="HUD/FinishScreen/ColorRect/VBoxContainer/MistakesRow"]
layout_mode = 2
text = "Mistakes: 0/10"
label_settings = SubResource("LabelSettings_akisb")

[node name="FinishButton" type="TextureButton" parent="HUD/FinishScreen/ColorRect"]
modulate = Color(0.533333, 0.643137, 0.862745, 1)
layout_mode = 0
offset_left = 1102.0
offset_top = 463.0
offset_right = 1376.0
offset_bottom = 622.0
texture_normal = SubResource("AtlasTexture_5d3lm")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_group_ = true

[node name="FinishButtonText" type="Label" parent="HUD/FinishScreen/ColorRect/FinishButton"]
layout_mode = 0
offset_left = 52.0
offset_top = 37.0
offset_right = 220.0
offset_bottom = 133.0
text = "PLAY"
label_settings = SubResource("LabelSettings_40qpg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 904.0
offset_top = 378.0
offset_right = 1586.0
offset_bottom = 651.0
pivot_offset = Vector2(341, 136)

[node name="CountdownLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_d2wnh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tutorial" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("17_16m7q")

[node name="Label" type="Label" parent="Tutorial"]
layout_mode = 0
offset_left = 997.0
offset_top = 897.0
offset_right = 1472.0
offset_bottom = 939.0
text = "Use Mouse to Collect Ingredients"
label_settings = ExtResource("18_yhj1o")

[node name="Label2" type="Label" parent="Tutorial"]
layout_mode = 0
offset_left = 37.0
offset_top = 405.0
offset_right = 512.0
offset_bottom = 447.0
text = "Follow the recipe!"
label_settings = ExtResource("18_yhj1o")

[node name="CountdownLabel" type="Label" parent="Tutorial"]
layout_mode = 0
offset_left = 924.0
offset_top = 126.0
offset_right = 1606.0
offset_bottom = 675.0
size_flags_horizontal = 4
text = "Ready?"
label_settings = SubResource("LabelSettings_f44vb")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="KillZone" type="Area2D" parent="."]
script = ExtResource("19_02ytf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(1057, 1498)
shape = SubResource("RectangleShape2D_wf6ld")

[connection signal="timeout" from="Dropper/Timer" to="Dropper" method="_on_timer_timeout"]
[connection signal="pressed" from="HUD/FinishScreen/ColorRect/FinishButton" to="." method="_on_finish_button_pressed"]
[connection signal="body_entered" from="KillZone" to="KillZone" method="_on_body_entered"]
